correction by rawfiner

--- a/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
+++ b/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
@@ -10,7 +10,7 @@ tags: announcement, darktable-release
 <!-- [Français](https://linuxfr.org/news/darktable-3-0-une-version-plus-que-majeure), -->
 <!-- [Italiano](https://www.mauriziopaglia.it/darktable-3-0/). -->
 
-Following the tradition, darktable 3.0 was released for Christmas. After a lot of renewal in 2018, 2019 has seen many very unexpected changes in darktable, both in its user interface and in its internal mechanisms. This makes darktable 3.0, a more than major version, justifying the direct transition from version 2.6.x to version 3.0.
+Following the tradition, darktable 3.0 was released for Christmas. After a lot of renewal in 2018, 2019 has seen many very unexpected changes in darktable, both in its user interface and in its internal mechanisms. This makes darktable 3.0 a more than major version, justifying the direct transition from version 2.6.x to version 3.0.
 
 The announcement and release notes for this new release can be found here:
 [https://www.darktable.org/2019/12/darktable-300-released/](https://www.darktable.org/2019/12/darktable-300-released/).
@@ -19,27 +19,27 @@ Among the new major features (the list is huge):
 
 * A brand new GUI, more modern, fully redesigned and customizable via GTK+ CSS rules. There is no more size, color, fixed position in the Gtk C darktable code. This version already comes with several themes.
 * A new "culling" mode on the lighttable. It displays a fixed number of consecutive images starting from the first selected (or a set of selected images), and allows you to pan & zoom them. The number of displayed images can be set by the user, and they can be navigated with the mouse wheel and keyboard. Finally, it provides a comparison mode of images often requested.
-* A new timeline view, making possibility to select a date range to display related images
+* A new timeline view, making it possible to select a date range to display related images
 * A quite extensive rewrite of the lighttable view (including the filmstrip in darkroom view) has been made to greatly improve the overall performance. The lighttable is now usable on 4K and 5K monitors. darktable 3.0 also brings many code optimizations for CPU and SSE paths.
-* A new *filmic RGB* module which, like the previous module *filmic*, is designed to replace *basic curve*, *shadows and highlights* and other global tone-mapping modules. This new version should be easier to use and it will reduce color casts. The old *filmic* module is now depreciated and only available on images where it was previously used.
+* A new *filmic RGB* module which, like the previous module *filmic*, is designed to replace *base curve*, *shadows and highlights* and other global tone-mapping modules. This new version should be easier to use and it will reduce color casts. The old *filmic* module is now depreciated and only available on images where it was previously used.
 * A new module *tone equalizer* has been created to merge the features of *zone system*, *shadows and highlights*, and (local) *tone mapping* modules in a scene-referred RGB space. It brings an easy and safe way to remap tones locally, performing a quick zone-based dodging and burning using the [zone system](https://www.wikiwand.com/fr/Zone_system) of [Ansel Adams](https://www.wikiwand.com/fr/Ansel_Adams).
 * New modules *curve RGB* and *levels RGB*. They have modes for linked and independant RGB channels.
-* The module *noise reduction (profile)* has been greatly improved. It now offers high-performance default settings in most cases. It is thus no longer necessary to use the two chroma and luma instances. In most cases only one instance is sufficient. For images processed with darktable 2.6 or earlier, it is possible to upgrade the module to the new processing algorithms via a checkbox in the module.
+* The module *denoise (profiled)* has been greatly improved. It now offers high-performance default settings in most cases. It is thus no longer necessary to use the two chroma and luma instances. In most cases only one instance is sufficient. For images processed with darktable 2.6 or earlier, it is possible to upgrade the module to the new processing algorithms via a checkbox in the module.
 * A new module *3D lut*, for handling 3D RGB Lut transformations (PNG Hald-CLUT and Cube files are supported).
-* A complete rework of the *tagging* module. It is now faster and more complete, with a new hierarchical view, possibility to designate tags private or by categories or even search synonyms.
+* A complete rework of the *tagging* module. It is now faster and more complete, with a new hierarchical view, possibility to set tags as private, to assign them to categories, or to even search synonyms.
 * Export module have now an option to select which metadata to export. 
 * A new module *basic adjustments*. It allows you to adjust the black level, exposure, highlight compression, contrast, middle grey, brightness and saturation. It also has an auto feature based on Rawtherapee’s auto levels that can work on the entire image or a user selected area.
-* A new *raster mask*, a copy of a parametric mask that allow possibility to apply this mask on whole modules in the pixel-pipe.
+* A new *raster mask*, that allows to copy a parametric mask to other modules in the pixel-pipe.
 * And many other minor (but useful) features. We will talk about some of them, in the last part of this article.
 
-As with every darktable major release, the database format changes, so **you can't go back to the previous version once you go to 3.0** : it's always advisable to make a backup of your database (~/.config/darktable/ directory) **before** the update.
+As with every darktable major release, the database format changes, so **you can't go back to the previous version once you go to 3.0**: it's always advisable to make a backup of your database (~/.config/darktable/ directory) **before** the update.
 However, darktable 3.0 introduces an automatic backup of your database in version 2.6 or earlier due to so many changes darktable brings, and particularly a whole rework of pixel-pipe order.
 
 # Major features
 
 ## A whole new complete CSS themable GUI
 
-darktable 3.0 introduce now a more modern and completely themable GUI by CSS. It is now also compatible with 4k and 5k monitors. With that whole rework, four themes have been introduced :
+darktable 3.0 introduce now a more modern and completely themable GUI by CSS. It is now also compatible with 4k and 5k monitors. With that whole rework, four themes have been introduced:
 
 * *darktable*: the adapted original theme (by default), it uses the default font of the operating system.
 
@@ -48,15 +48,15 @@ darktable 3.0 introduce now a more modern and completely themable GUI by CSS. It
 darktable 3.0 specifically introduces the following three new themes (in addition to the default theme adapted to the new interface).
 These three themes, called *elegant*, require the installation of *Roboto* fonts to achieve the desired complete visual experience.
 
-* *darktable-elegant-darker* : similar to default theme but with the Roboto more condensed font.
+* *darktable-elegant-darker*: similar to default theme but with the Roboto more condensed font.
 
 ![darker theme](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/darkertheme.png)
 
-* *darktable-elegant-dark* : lighter version.
+* *darktable-elegant-dark*: lighter version.
 
 ![dark theme](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/darktheme.png)
 
-* *darktable-elegant-grey* : even lighter version. Near to middle-grey.
+* *darktable-elegant-grey*: even lighter version. Near to middle-grey.
 
 ![grey theme](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/greytheme.png)
 
@@ -65,7 +65,7 @@ Apart from any aesthetic considerations, the recommended interface colour for co
 
 1. exaggeration of the exposure perceived in the image (highlighted by the experience of the [Adelson's checker shadow illusion](https://en.wikipedia.org/wiki/Checker_shadow_illusion)): the image seems clearer than it is,
 1. decrease in the perceived saturation in the image (Hunt effect): the colors seem less rich,
-1. decrease in perceived contrast in the image ([Bartleson-Breneman effect](https://www.hisour.com/color-appearance-model-24824/)) : tones appear flatter.
+1. decrease in perceived contrast in the image ([Bartleson-Breneman effect](https://www.hisour.com/color-appearance-model-24824/)): tones appear flatter.
 
 Using a dark interface to retouch photos can therefore lead to excessive retouching (abuse of contrast and saturation) and to a photo that is too dark once printed. The introduction of the grey theme avoids these illusions and consequences on image processing.
 
@@ -126,7 +126,7 @@ As you can see below, new visual icons have appeared on the right. They indicate
 
 - Default modules that cannot be disabled: *full round surrounded by a circle* (ex: *gamma*)
 - Modules in active state (that could be disable): on/off button enabled* (ex: *white balance*)
-- Modules in the state disabled (that could be enabled) : on/off button disabled and the text of the module in light grey (ex: *base curve*)
+- Modules in the state disabled (that could be enabled): on/off button disabled and the text of the module in light grey (ex: *base curve*)
 - Deprecated modules (recommended not to use them anymore): *cross* (ex: *filmic*). If enabled, white and light grey text and light grey if disabled.
 
 ![history](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/history.png)
@@ -153,7 +153,7 @@ You can zoom in this new view, via the mouse wheel.
 
 This new window has its own color profile, which allows you to place it on another screen and use its dedicated profile. As for the main window, the profile is automatically retrieved by darktable via colord or xatom, but it is possible to add it manually in `~/.config/darktable/color/out` and then select it from the display profile menu. Note that colord does not seem to work under Windows with a second screen, so Windows users will have to perform the operation manually.
 
-### Accels window : viewing shortcuts in the active view
+### Accels window: viewing shortcuts in the active view
 
 At any time, whatever the active view of darktable, you can display the shortcuts that can be used in this view. This list of shortcuts is dynamic and includes both default shortcuts and your custom ones. To display it, nothing could be easier: press the letter `h` (then `Alt` if you want to leave this panel active) It is possible to separate it from the darktable window via the button that appears at the top right).
 
@@ -178,24 +178,24 @@ It is possible to modify the number according to the desired zoom level (7 corre
 
 ### *culling* view
 
-The lighttable gives until now two modes : *zoomable light table* and *file manager*. A third mode appears, and not the least : a *culling* mode. This mode displays a consecutive (or not) and fixed number of images from the selected one. It allows to zoom and pan on them. Images number can be fixed by the user, and it's possible to move on with mouse wheel and keyboard.
+The lighttable gives until now two modes: *zoomable light table* and *file manager*. A third mode appears, and not the least: a *culling* mode. This mode displays a consecutive (or not) and fixed number of images from the selected one. It allows to zoom and pan on them. Images number can be fixed by the user, and it's possible to move on with mouse wheel and keyboard.
 
-Yes, you understand, one of the most frequently requested features of the lighttable is finally there : possibility to compare images. See now when it works !
+Yes, you understand, one of the most frequently requested features of the lighttable is finally there: possibility to compare images. See now when it works !
 
 Two options exist:
 
-- *fixed zoom* : images number is set by a cursor on the right of culling selector menu (launching shortcut of this mode: `x`)
-- *dynamic zoom* : images number is set by images selected on lighttable (launching shortcut of this mode: `Ctrl+X`)
+- *fixed zoom*: images number is set by a cursor on the right of culling selector menu (launching shortcut of this mode: `x`)
+- *dynamic zoom*: images number is set by images selected on lighttable (launching shortcut of this mode: `Ctrl+X`)
 
 Of course, here, dynamic zoom will have same effect as fixed one if selected number is the one set on fixed zoom mode. In both cases, you can move on images of the actual collection simply with:
 
-- `Wheel mouse` (or keyboard `left and righ arrows`) : to display previsous or next images.
+- `Wheel mouse` (or keyboard `left and righ arrows`): to display previsous or next images.
 
 The number of images to be displayed and the mode option are set in the selection mode with settings on the right of the culling menu at the bottom of the lighttable:
 
 ![culling mode](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/culling.png)
 
-If, as here, the number of images to be displayed, defined in this mode, is 2 (fixed zoom), selecting an image will display that image and the next one. This gives us (reminder : mode launched via `x` shortcut):
+If, as here, the number of images to be displayed, defined in this mode, is 2 (fixed zoom), selecting an image will display that image and the next one. This gives us (reminder: mode launched via `x` shortcut):
 
 ![fixed zoom](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/cullingfixe.png)
 
@@ -207,12 +207,12 @@ And the same, on six selected images, in dynamic range mode (mode lauched with `
 
 In this culling mode, whether in fixed zoom or dynamic zoom, here are the options available to you:
 
-- `Ctrl+wheel mouse` : zoom in displayed images.
-- `Shift+Ctrl+wheel mouse` : zoom only on the image where the cursor is hover.
-- `Click & drag` : on a zoomed imaged, allow to pan on the image (will apply on all displayed images at the same time).
-- `Shift+Click & drag` : same as above but only on the image where the cursor is hover.
+- `Ctrl+wheel mouse`: zoom in displayed images.
+- `Shift+Ctrl+wheel mouse`: zoom only on the image where the cursor is hover.
+- `Click & drag`: on a zoomed imaged, allow to pan on the image (will apply on all displayed images at the same time).
+- `Shift+Click & drag`: same as above but only on the image where the cursor is hover.
 
-**Warning :** *Although it is possible to display more than 4 images, zoom and pan within images are only available for up to 4 images, for visual comfort and performance reasons.*
+**Warning:** *Although it is possible to display more than 4 images, zoom and pan within images are only available for up to 4 images, for visual comfort and performance reasons.*
 
 As you can see, the culling mode also displays the main image information, rating stars and color labels. It is of course possible, as in other modes, to define them in this mode.
 
@@ -220,26 +220,26 @@ An important trick to know: you can simply show or hide these informations depen
 
 ### *timeline* view
 
-*timeline* view is a new view displayed on the bottom of lighttable with `Ctrl+f` shortcut (same shortcut as filmstrip in darkroom view, this new view is displayed on same place but in lighttable view). This view could also be activated or disable on preferences window.
+*timeline* view is a new view displayed on the bottom of lighttable with `Ctrl+f` shortcut (same shortcut as filmstrip in darkroom view, this new view is displayed on same place but in lighttable view). This view could also be activated or disabled on preferences window.
 
-This view display a chronological timeline of your images and allow to select a wanted range with a simple click & drag with your mouse. You just have to move your cursor on a part of this view to see the period (displayed in year/month).
+This view displays a chronological timeline of your images and allows to select a wanted range with a simple click & drag with your mouse. You just have to move your cursor on a part of this view to see the period (displayed in year/month).
 
 You could see a preview of this timeline view on the four themes images in the beginning of this article.
 
-## A workflow that extends over the RGB space :
+## A workflow that extends over the RGB space:
 
-New modules appear, exclusively in RGB space. With darktable 3.0, you can edit your images entirely in RGB, with the modules that will be presented to you in this section: the vast majority of images can be processed exclusively with these modules, combined with the *white balance*, *exposure* and *noise reduction (profile)* modules. A powerful and fast workflow, with fewer modules. In a word: efficient.
+New modules appear, exclusively in RGB space. With darktable 3.0, you can edit your images entirely in RGB, with the modules that will be presented to you in this section: the vast majority of images can be processed exclusively with these modules, combined with the *white balance*, *exposure* and *denoise (profiled)* modules. A powerful and fast workflow, with fewer modules. In a word: efficient.
 
 => For an optimal use of this new workflow, it is strongly recommended to activate, in the *input color profile* module, the **linear Rec2020 RGB** working profile (you could also use, if necessary, **linear prophoto RGB**).
-=> It is also strongly recommended in this context to disable *basic curve* and  *sharpen* modules via the three new options of darktable *preferences*, tab *core options* then heading *quality*
+=> It is also strongly recommended in this context to disable *base curve* and  *sharpen* modules via the three new options of darktable *preferences*, tab *core options* then heading *quality*
 
-To understand this linear RGB workflow and why it is adopted in darktable, we recommend you to watch the following video: https://www.youtube.com/watch?v=3FFU-Ltvm0I. In general, taking the time to watch Aurélien Pierre's latest videos on this version 3.0 will help you to become more efficient in processing your images, allowing you to make the most of this new workflow and, ultimately, gradually save a lot of time.
+To understand this linear RGB workflow and why it is adopted in darktable, we recommend you to watch the following video: [Image processing and pixel pipeline in darktable 3.0](https://www.youtube.com/watch?v=3FFU-Ltvm0I). In general, taking the time to watch Aurélien Pierre's latest videos on this version 3.0 will help you to become more efficient in processing your images, allowing you to make the most of this new workflow and, ultimately, gradually save a lot of time.
 
 However, a summary of this workflow and its benefits is provided below.
 
-The linear RGB workflow gradually introduced since darktable 2.6 with *filmic* and *color balance* allows to free oneself from the graphic heritage of the years 1980-1990 centered on low dynamic range photography for paper printing. This traditional workflow, known as "display related" (*display-referred*), assumes that RGB values encode colours (in the perceptual sense) and manipulate them in a psychologically realistic way. Unfortunately, psychophysical models that link (physical) light to (psychological) colour sensation are only valid for images with low contrast (or low dynamic range), in the order of 100:1 (6.67 EV), which poses increasing problems as modern cameras see their dynamic range increase (currently between 12 and 14 EV, or 4096:1 to 16384:1). To be anticipated if you want to push your low lights: parasitic shade turns and over- or under-saturation problems, color that explodes when you correct the luminance, luminance that explodes when you correct the color... Hell.
+The linear RGB workflow gradually introduced since darktable 2.6 with *filmic* and *color balance* allows to free oneself from the graphic heritage of the years 1980-1990 centered on low dynamic range photography for paper printing. This traditional workflow, known as display-referred, assumes that RGB values encode colours (in the perceptual sense) and manipulate them in a psychologically realistic way. Unfortunately, psychophysical models that link (physical) light to (psychological) colour sensation are only valid for images with low contrast (or low dynamic range), in the order of 100:1 (6.67 EV), which poses increasing problems as modern cameras see their dynamic range increase (currently between 12 and 14 EV, or 4096:1 to 16384:1). To be anticipated if you want to push your low lights: parasitic shade turns and over- or under-saturation problems, color that explodes when you correct the luminance, luminance that explodes when you correct the color... Hell.
 
-The linear RGB workflow, known as "scene related" (*scene-referred*), assumes that the RGB values encode light emissions, i.e. a light spectrum reduced to three intensities through the camera's sensor, which is nothing more than a colorimeter. It manipulates RGB values in a physically realistic way, digitally reproducing the effect of optical filters. This not only makes it possible to accommodate any dynamic range, without having to change algorithms (and therefore no more specific HDR processing), but also to obtain more natural and predictable results.
+The linear RGB workflow, known as scene-referred, assumes that the RGB values encode light emissions, i.e. a light spectrum reduced to three intensities through the camera's sensor, which is nothing more than a colorimeter. It manipulates RGB values in a physically realistic way, digitally reproducing the effect of optical filters. This not only makes it possible to accommodate any dynamic range, without having to change algorithms (and therefore no more specific HDR processing), but also to obtain more natural and predictable results.
 
 This new workflow - although already adopted by the film industry since the 1990s, out of practical necessity - still acts as a curious beast in photography, and will change the habits of users who will have to reason more and more in terms of light (physical) and less and less in terms of colour (psychological and perceptual). 
 
@@ -258,13 +258,13 @@ By the way, some bugs have been fixed, such as the over-saturation (especially i
 1. The desaturation curve is displayed on the graph.
 1. The global saturation setting, implemented to correct the effects of the chrominance preservation bug, is removed. The use of saturation in the color balance is recommended.
 
-![filmic RVB](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/filmicrvb.png)
+![filmic RGB](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/filmicrvb.png)
 
-Two new chrominance preservation modes have been added in addition to the old one (max RGB): luminance Y and power standard. They will allow to adapt to different scenarios, for example when the max RGB mode darkens the blue skies too much.
+Two new chrominance preservation modes have been added in addition to the old one (max RGB): luminance Y and power norm. They will allow to adapt to different scenarios, for example when the max RGB mode darkens the blue skies too much.
 
 ### New *tone equalizer* module
 
-The *tone equalizer* takes the functionalities of *tone mapping* and *curves*, but adapts them to a logarithmic representation of brightness (in IL/EV) in accordance with Ansel Adams *zone system*. Its function is simply to define a parametric exposure compensation, which varies according to the original brightness of the pixels. It is possible to fully reproduce the operation of the *tone equalizer* by using several instances of the *exposure* module merged in parametric mode and set to isolate different exposure levels. The *tone equalizer* only speeds up the process, and automates parts of it. 
+The *tone equalizer* takes the functionalities of *tone mapping* and *curves*, but adapts them to a logarithmic representation of brightness (in EV) in accordance with Ansel Adams *zone system*. Its function is simply to define a parametric exposure compensation, which varies according to the original brightness of the pixels. It is possible to fully reproduce the operation of the *tone equalizer* by using several instances of the *exposure* module merged in parametric mode and set to isolate different exposure levels. The *tone equalizer* only speeds up the process, and automates parts of it.
 
 It offers an interface that allows you to quickly define a selective exposure compensation for each exposure band between 0 EV (white) and -8 EV (black), similar to the audio equalizers of hifi amplifiers. Exposure compensation performs content extraction by guided filter, allowing the same correction to be applied to continuous areas of the image, and thus to preserve local contrast (the logic is similar to the module *shadows and highlights* but the guided filter is designed to never produce halos on the contrasting edges). The *tone equalizer* therefore makes it possible to re-light the scene afterwards but in a physically realistic way, without affecting chrominance or creating halos, and therefore much more credible than traditional HDR mapping or shadow correction tools. 
 
@@ -336,12 +336,12 @@ In addition, the module’s default settings are also automatically adjusted acc
 
 The *3D lut* module has been introduced. It allows to apply 3D matrix to a photo. These matrix allow the module to convert an RGB value into another RGB value (for B&W, all RGB values into grey, black and white values). They are used to simulate silver films or to create colourful universes. This module is the same as the older *HaldCLut* module.
 
-*3D lut* use three types of matrix : .cube files, HaldCLut .png ones and compressed LUT.
+*3D lut* use three types of matrix: .cube files, HaldCLut .png ones and compressed LUT.
 
 - .cube files are text files that are widely used in video and by colorists. 
 - HaldCLut.png files are image files. They are smaller than.cube files.
 
-**Warning:** *These two file types (.cube and.png) being too large, they are not saved in the darktable database or in the .xmp files; only the directory and the file name are saved. This makes it more difficult to share the processing using 3D Lut and its permancence, if these files are lost.
+**Warning:** *These two file types (.cube and.png) being too large, they are not saved in the darktable database or in the .xmp files; only the directory and the file name are saved. This makes it more difficult to share the processing using 3D Lut and these files should not be lost.
 For another user to be able to redo the processing, it will be necessary to provide him the file (.cube or.png) with the RAW file and the .xmp without the application of 3d Lut because the link will be different. This correspondent will have to apply the module to Lut's directory on his machine and operating system.*
 
 - Compressed LUT files are compressed.png image files with routines proposed by G'Mic. Their size allows them to be included in the database and .xmp, so they can be retrieved and transmitted more easily to another user. 
@@ -349,7 +349,7 @@ You can download [HaldClut.png files that simulate silver films](http://www.quel
 
 You will also find [the article in English](https://www.darktable.org/2019/05/New%20module-lut3d/), it also gives links to Lut files.
 
-**How to use *3D lut* :**
+**How to use *3D lut*:**
 
 - Define a directory to use in the preferences at the end of the *core options* tab:
 
@@ -385,7 +385,7 @@ The top window (attached keywords) always shows the list of keywords attached to
 
 To the left of each keyword is now a small icon that can have three aspects: either nothing at all, or a dash, or a check mark.
 
-* Nothing at all: this is a hover image, but not selected.
+* Nothing at all: this is a hovered image, but not selected.
 * A dash: the keyword is attached to at least one of the selected images.
 * A check mark: the keyword is attached to all selected images.
 
@@ -399,7 +399,7 @@ One item:
 
 Two items:
 
-* *Attach the keyword to all selected images* - If you have selected a series of images containing different keywords, this item allows you to attach the keyword to all selected images; those that were already labeled remain so, and those that were not. Very practical!
+* *Attach the keyword to all selected images* - If you have selected a series of images containing different keywords, this item allows you to attach the keyword to all selected images; those that were already labeled remain so, and those that were not become labeled. Very practical!
 * *Detach the keyword* - As above.
 
 At the bottom of the window, the number of buttons has increased from two to five, In addition to the already known `attach` and `release` buttons, three more appear:
@@ -452,18 +452,18 @@ Last but not least, both windows are now resizable! Simply do a `Control` + `whe
 
 *basic adjustments* allows, as its name suggests, basic adjustments, on essential options in a single module. For the use of this module as well as for the raster masks part who will follows, I chose a RAW proposed for processing by [@holly76](https://forums.darktable.fr/showthread.php?tid=3930).
 
-This module use the two main sliders of *exposition* one:
+This module use the two main sliders of *exposition*:
 
 ![Exposition](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/basicadjustmentsexposition.png)
 
-The three sliders of *contrast*, *brightness* and *saturation* :
+The three sliders of *contrast*, *brightness* and *saturation*:
 
 ![](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/basicadjustmentsC_L_S.png)
 
 **Warning:**  *Do not use *basic adjustments* with the modules *exposure* and *contrast brightness saturation*. Indeed, this would be like creating a second instance of the module without a mask:
-*preserve color* uses the same values as in *basic curve* (options also added in this module on darktable 3.0). It is therefore preferable not to use these two options at the same time and even to use these two modules at the same time.*
+*preserve color* uses the same values as in *base curve* (options also added in this module on darktable 3.0). It is therefore preferable not to use these two options at the same time and even to use these two modules at the same time.*
 
-**An example of treatment:**
+**An example of processing:**
 
 I chose this largely underexposed photo. I use the picker with an area that seems to represent a correctly exposed area:
 
@@ -475,13 +475,13 @@ The sliders are adjusted to process this photo:
 
 Using this module allows you to quickly correct a photo that does not require too much processing. It is therefore particularly suitable for simple and fast processing, or to begin in RAW processing (as shown in this example). The main limitation of this module is that these different parameters usually occur (via the different modules offering them outside this one) at different levels of image processing, so they do not provide quite the same rendering.
 
-**=> It must not be used with the new RGB workflow offered by the trilogy: *filmic rvb*, *color balance* and *tone equalizer* to which is added according to needs: *rvb curve* and *rvb levels*.**
+**=> It must not be used with the new RGB workflow offered by the trilogy: *filmic rgb*, *color balance* and *tone equalizer* to which is added according to needs: *rgb curve* and *rgb levels*.**
 
 ### New *raster mask*
 
 Raster masks add a new mode that allows you to reuse a parametric mask from one module to another module. 
 
-**Warning:** *The raster mask can only take a mask from a module preceding it in the processing chain. It is also important to be careful not to move a module using a raster mask before the module of the original mask. This can lead to undesirable effects (in the worst case, a darktable crash).*
+**Warning:** *The raster mask can only take a mask from a module preceding it in the processing chain. It is also important to be careful not to move a module using a raster mask before the module of the original mask. This can currently lead to undesirable effects (in the worst case, a darktable crash).*
 
 I took the picture above for this example. I started by making a parametric mask on the shadows with the exposure module:
 ![Masque paramétrique de départ](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/M_raster1.png)
@@ -497,7 +497,7 @@ Then, to give a little pep to the shadows in the greens, I used the same mask in
 The image processing chain (pipeline) has been thoroughly reviewed and optimized. It is now possible to re-order the modules via a `Shift+Ctrl+Drag&Drop` of these modules in the darkroom or via the instance menu and the up/down options.
 **WARNING:** *It is VERY IMPORTANT TO UNDERSTAND that moving the modules changes the order in which they are processed, so it affects the rendering of the current image. The default order is safe and optimized for the majority of uses. It is recommended to move a module only if you know what you are doing and what effect it will have on your image. Under no circumstances should this change be used to "classify" these modules.
 
-The *colored areas* module now displays a histogram based on the "select by" option. It is now possible to add and remove nodes to the curve, but these nodes can still be moved with the old size control by checking the edit by area box. There is also a new "pronounced" processing option and a new picker that allows you to create a curve based on the selected image area.
+The *color zones* module now displays a histogram based on the "select by" option. It is now possible to add and remove nodes to the curve, but these nodes can still be moved with the old size control by checking the edit by area box. There is also a new "pronounced" processing option and a new picker that allows you to create a curve based on the selected image area.
 
 Some performance and visual improvements are also to be highlighted on the *color picker* (left panel of the darkroom) and *tone curve* modules. More generally, many improvements have been made around the selection picker in various darktable locations.
 
@@ -509,7 +509,7 @@ darktable 3.0 also brings many bug fixes and some other minor improvements proba
 
 # A 3.0.1 release already on its way
 
-Due to the important changes made by version 3.0, a feature freez was decided at the beginning of October and new text strings were frozen at the beginning of November. This had allow both time to fix as many bugs as possible and to translators the possibility to offer their translations for darktable 3.0 release on Christmas.
+Due to the important changes made by version 3.0, a feature freez was decided at the beginning of October and new text strings were frozen at the beginning of November. This allowed both time to fix as many bugs as possible and to translators the possibility to offer their translations for darktable 3.0 release on Christmas.
 
 Thus, since then, new improvements have already been proposed or are under development. They should be published for 3.0.1, release expected in the first quarter of 2020. Here are some of the main new features expected for this 3.0.1:
 
